--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <section>
                 <h2>
                     Seats Cleaning
-                    <img src="c:\Users\Hp\OneDrive\Desktop\DA-VINCI CLEANERS\IMG_20250215_124806.jpg" alt="sofa cleaning">
+                    <img src="sofa cleaning.jpg" alt="sofa cleaning">
                 </h2>
                 <article class="item">
                     <p class="SEATS">ITEM</p><p class="PRICE">PRICES (Ksh.)</p>
@@ -35,7 +35,7 @@
             <section>
                 <h2>
                     Mattress Cleaning
-                    <img src="c:\Users\Hp\OneDrive\Desktop\DA-VINCI CLEANERS\IMG_20250211_150324.jpg" alt="mattress cleaning">
+                    <img src="" alt="mattress cleaning">
                 </h2>
                 <article class="item">
                     <p class="mattress">Size 3*6</p><p class="price">1800</p>
@@ -51,7 +51,7 @@
             <section>
                 <h2>
                     Carpet cleaning
-                    <img src="c:\Users\Hp\OneDrive\Desktop\DA-VINCI CLEANERS\Carpet @2t.jpeg" alt="carpet cleaning">
+                    <img src="Carpet @2t.jpeg" alt="carpet cleaning">
                 </h2>
                 <article class="item">
                     <p class="carpet">Size 5*8</p><p class="price">1200</p>
@@ -65,7 +65,7 @@
                 <h2>
                     Fumigation Services
                     <h3>Cockroaches</h3>
-                    <img src="c:\Users\Hp\OneDrive\Desktop\DA-VINCI CLEANERS\Cockroaches (2).jpeg" alt="Cockroaches">
+                    <img src="Cockroaches (2).jpeg" alt="Cockroaches">
                 </h2>
                 <article class="item">
                     <p class="size_of_house">Single Room</p><p class="price">2500</p>
@@ -78,7 +78,7 @@
                     <p class="size_of_house">6 bedrooms</p><p class="price">8000</p>
                 </article>
                 <h3>Bedbugs</h3>
-                <img src="c:\Users\Hp\OneDrive\Desktop\DONVAN CLEANERS\PICS & VIDS\services_img1-02.png" alt="Bedbug">
+                <img src="bedbug.png" alt="Bedbug">
                 <article class="item">
                     <p class="size_of_house">Single Room</p><p class="price">2500</p>
                     <p class="size_of_house">Bedsitter</p><p class="price">2500</p>
@@ -95,7 +95,7 @@
                 <h2>
                     General Cleaning
                     <h3>General Deep Cleaning</h3>
-                    <img src="c:\Users\Hp\OneDrive\Desktop\DA-VINCI CLEANERS\IMG_20250201_153722-1.jpg" alt="General cleaning">
+                    <img src="general cleaning.jpg" alt="General cleaning">
                 </h2>
                 <article class="item">
                     <p class="deep_cleaning">1 bedroom</p><p class="price">10000</p>
