--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section>
                 <h2>
                     Mattress Cleaning
-                    <img src="" alt="mattress cleaning">
+                    <img src="mattress.jpg" alt="mattress cleaning">
                 </h2>
                 <article class="item">
                     <p class="mattress">Size 3*6</p><p class="price">1800</p>
