--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="pricing"> 
         <main>
+            <img src="logo1.jpg" alt="logo">
             <h1>DA-VINCI HOME CLEANERS</h1>
             <p class="contact">Tel: +254 753 249 534</p>
             <p class="mission">Mission: To offer most satisfactory and professional cleaning services</p>
@@ -136,7 +137,7 @@
             <p>
                 <a href="https://www.facebook.com/share/12EJFjQAtSq/" target="_blank">Visit our page for more inormation</a>
             </p>
-            <p class="contact">For Bookings & Enquiries Call/Text/Whatsapp us on:</p>
+            <p class="info">For Bookings & Enquiries Call/Text/Whatsapp us on:</p>
             <p class="contact">Tel: +254 753 249 534</p>
             <p class="address">Da-Vinci Home Cleaning Services</p>
         </footer>
