--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img src="sofa cleaning.jpg" alt="sofa cleaning">
                 </h2>
                 <article class="item">
-                    <p class="SEATS">ITEM</p><p class="PRICE">PRICES (Ksh.)</p>
+                    <p class="SEATS">ITEM</p><p class="PRICE">PRICES (Ksh./seater)</p>
                     <p class="seats">Normal Sofa</p><!--<p class="unit-quantity">1 seater</p>--><p class="price">500</p>
                     <p class="seats">Recliner</p><p class="price">600</p>
                     <p class="seats">Dining Seats</p><p class="price">200</p>
@@ -39,6 +39,7 @@
                     <img src="mattress.jpg" alt="mattress cleaning">
                 </h2>
                 <article class="item">
+                    <p class="SEATS">ITEM</p><p class="PRICE">PRICES (Ksh.)</p>
                     <p class="mattress">Size 3*6</p><p class="price">1800</p>
                     <p class="mattress">Size 3.5*6</p><p class="price">2000</p>
                     <p class="mattress">Size 4*6</p><p class="price">2200</p>
@@ -55,6 +56,7 @@
                     <img src="Carpet @2t.jpeg" alt="carpet cleaning">
                 </h2>
                 <article class="item">
+                    <p class="SEATS">ITEM</p><p class="PRICE">PRICES (Ksh.)</p>
                     <p class="carpet">Size 5*8</p><p class="price">1200</p>
                     <p class="carpet">Size 6*9</p><p class="price">1620</p>
                     <p class="carpet">Size 7*10</p><p class="price">2100</p>
@@ -69,6 +71,7 @@
                     <img src="Cockroaches (2).jpeg" alt="Cockroaches">
                 </h2>
                 <article class="item">
+                    <p class="SEATS">ITEM</p><p class="PRICE">PRICES (Ksh.)</p>
                     <p class="size_of_house">Single Room</p><p class="price">2500</p>
                     <p class="size_of_house">Bedsitter</p><p class="price">2500</p>
                     <p class="size_of_house">1 bedroom</p><p class="price">3500</p>
@@ -81,6 +84,7 @@
                 <h3>Bedbugs</h3>
                 <img src="bedbug.png" alt="Bedbug">
                 <article class="item">
+                    <p class="SEATS">ITEM</p><p class="PRICE">PRICES (Ksh.)</p>
                     <p class="size_of_house">Single Room</p><p class="price">2500</p>
                     <p class="size_of_house">Bedsitter</p><p class="price">2500</p>
                     <p class="size_of_house">1 bedroom</p><p class="price">4000</p>
@@ -99,6 +103,7 @@
                     <img src="general cleaning.jpg" alt="General cleaning">
                 </h2>
                 <article class="item">
+                    <p class="SEATS">ITEM</p><p class="PRICE">PRICES (Ksh.)</p>
                     <p class="deep_cleaning">1 bedroom</p><p class="price">10000</p>
                     <p class="deep_cleaning">2 bedrooms</p><p class="price">15000</p>
                     <p class="deep_cleaning">3 bedrooms</p><p class="price">25000</p>
@@ -109,6 +114,7 @@
                 </article>
                 <h3>Post-Construction Cleaning</h3>
                 <article class="item">
+                    <p class="SEATS">ITEM</p><p class="PRICE">PRICES (Ksh.)</p>
                     <p class="post_construction">1 bedroom</p><p class="price">15000</p>
                     <p class="post_construction">2 bedroom</p><p class="price">20000</p>
                     <p class="post_construction">3 bedroom</p><p class="price">25000</p>
@@ -124,6 +130,7 @@
                     Other Services
                 </h2>
                 <article class="item">
+                    <p class="SEATS">ITEM</p><p class="PRICE">PRICES (Ksh.)</p>
                     <p class="deep_cleaning">Terrazzo & Cabro Cleaning</p><p class="price">40/sq.ft</p>
                     <p class="deep_cleaning">Toilet & Bowl Cleaning</p><p class="price">2000</p>
                     <p class="deep_cleaning">Saloon Car Interior Cleaning</p><p class="price">3000</p>
